--- a/app/components/style.css
+++ b/app/components/style.css
@@ -5,7 +5,6 @@
     height: 976px;
     display: flex;
     flex-direction: column;
-
     align-items: center;
   
 }
@@ -17,13 +16,13 @@ i{
 
 .hide-text{
     opacity: 0;
+    color : #868e96;
+    width: 100px;
 }
 
 .view-text{
     opacity: 1;
-   
+    color : #868e96;
+   width: 100px;
 }
 
-span{
-    color : #868e96;
-}
