--- a/app/protected/student/course/course-detail/accordion-sidebar/accordion-sidebar.css
+++ b/app/protected/student/course/course-detail/accordion-sidebar/accordion-sidebar.css
@@ -35,6 +35,7 @@
     width: 200px;
     padding: 10px;
     border-right: 1px solid #ccc;
+    text-transform: uppercase;
   }
   
   .Sidebar div {
@@ -45,6 +46,7 @@
     transition: background-color 0.3s ease;
     font-weight: bolder;
     font-size: 24px;
+    border-bottom: 1px solid #8E8E8E;
   }
   
   .Sidebar div:hover {
