--- a/app/protected/student/course/course-detail/accordion-sidebar/accordion-sidebar.css
+++ b/app/protected/student/course/course-detail/accordion-sidebar/accordion-sidebar.css
@@ -19,6 +19,7 @@
     font-weight: bold;
     height: 84px;
     color: #F2F2F2;
+    background-color: #F2F2F2;
   }
 
   .text-muted {
@@ -34,6 +35,7 @@
   .Sidebar {
     width: 200px;
     padding: 10px;
+    padding-right: 0px;
     border-right: 1px solid #ccc;
     text-transform: uppercase;
   }
@@ -45,7 +47,7 @@
     border-radius: 4px;
     transition: background-color 0.3s ease;
     font-weight: bolder;
-    font-size: 24px;
+    font-size: 14px;
     border-bottom: 1px solid #8E8E8E;
   }
   
@@ -57,6 +59,7 @@
   .Content {
     flex: 1;
     padding: 10px;
+    background-color: #E7E7E7;
   }
   
   /* Optional: Styles for the selected option */
