--- a/app/protected/student/course/course-detail/course-preview/course-preview.css
+++ b/app/protected/student/course/course-detail/course-preview/course-preview.css
@@ -28,15 +28,13 @@
   margin-bottom: 20px;
 }
 
-.video-wrapper {
-  width: 100%;
-  height: 0;
-  padding-top: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
+.player-wrapper {
   position: relative;
 }
 
 .react-player {
-  position: absolute;
+  position: relative;
+  margin: 0 auto;
   top: 0;
   left: 0;
 }
