--- a/app/components/videoSidebar.css
+++ b/app/components/videoSidebar.css
@@ -7,7 +7,7 @@
   right: 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+ justify-content: flex-start;
   /* border: red solid 2px ; */
   overflow-y: scroll;
   max-height: 500px; 
@@ -92,3 +92,38 @@ padding-left: 15px;
   max-height:   200px;
    overflow: auto
 }
+
+@media only screen and (max-width: 768px) {
+  /* Your CSS styles for mobile devices here */
+  
+.section  {
+    position: absolute;
+    top: 63px;
+   
+  }
+
+  .video-sidebar{
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    z-index: 99;
+  }
+  .title-content{
+    font-size: small !important;
+    padding-left: 100px;
+  }
+
+}
+
+.title-content{
+  font-size: medium;
+  padding-left: 80px;
+  font-weight: "600";
+  cursor: pointer;
+}
+
+.h3{
+ background-color: white;
+  padding: 10px 0px 10px 20px;
+   border-bottom: 1px solid gray
+  }
