refactor: Added a new current user icon

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -8,6 +8,10 @@
     border-radius: 0.25rem;
 }
 
+.user-icon {
+    font-size:  xx-large;
+}
+
 .mdk-drawer__scrim__open{
     opacity: 1;
     left: 0;
