--- a/app/components/react-player.css
+++ b/app/components/react-player.css
@@ -20,3 +20,35 @@
     justify-content: flex-start;
     align-items: center;
 }
+
+.comment-input{
+    width : 100%;
+    flex-wrap: wrap;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid black;
+    font-size: small;
+
+}
+
+.comment-container{
+    border: 1px solid black;
+    padding: 10px;
+    height: 150px;
+}
+
+.btn-container_icons{
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+        padding-right: 20px;
+}
+
+.btn-container_icons > button{
+    padding: 5px;
+    border-radius: 10px;
+    margin-bottom: 5px;
+}
