--- a/app/components/react-player.css
+++ b/app/components/react-player.css
@@ -32,6 +32,7 @@
     font-size: small;
     border: none;
     outline: none;
+    padding-left: 20px;
 
 }
 
@@ -40,7 +41,7 @@
     padding: 10px;
     height: 160px;
     border-radius: 10px;
-    margin-bottom: 30px;
+  
   
 }
 
@@ -63,11 +64,6 @@
     outline: none;
 }
 
-
-.loogedInUser-comment{
-    padding-bottom: 50px;
-}
-
 .description{
     opacity: 0;
 
@@ -75,5 +71,116 @@
 
 .storage-comments{
     list-style-type: none;
+    border-radius: 5px;
+    margin-bottom: 5px;
+    padding: 10px;
+    height: 120px;
+    /* border: 1px solid #ccc; */
+    
 }
 
+.view-replies{
+    margin-bottom: 20px;
+}
+
+
+.videoComments{
+   display: flex;
+   flex-direction: column;
+  justify-content: flex-start !important;
+  align-items: flex-start;
+    margin-bottom: 5px;
+    padding: 10px;
+    height: 160px !important;
+}
+.show-replies{
+    display: flex;
+    flex-direction: column;
+   justify-content: flex-start !important;
+   align-items: flex-start;
+     margin-bottom: 20px;
+     padding: 10px;
+     height: 120px;
+}
+
+.hide-btn {
+    display: none;
+}
+
+.hide-input-border{
+    border : none;
+    outline: none;
+}
+
+.reaction-icons{
+    display: flex;
+    justify-content: space-around;
+    width: 20%;
+    align-items: center;
+}
+
+.reply-text{
+    font-size: smaller;
+}
+
+.username {
+    font-size: 16px;
+     margin-left: 5px; 
+     font-weight: 600;
+}
+.reply-container{
+    display: flex;
+    padding: 10px;
+    position: relative;
+    bottom: 1em;
+    left : 0em; 
+}
+
+.reply-comment-input{
+    width : 600px;
+    flex-wrap: wrap;
+    text-wrap: wrap;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid black;
+    font-size: small;
+    padding-left: 20px;
+    padding-top:5px;
+}
+
+.reply-btn {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    bottom: 1.5em;
+    margin-right: 20px;
+    }
+
+.cancel-btn{
+    margin-right: 5px !important;
+}
+
+.shift-comments{
+    margin-bottom: 70px;
+}
+
+.reaction-icons > p {
+    cursor: pointer;
+}
+
+.reply-count {
+
+    font-size: 16px;
+    color:blue;
+    margin-left: 20px !important;
+    cursor: pointer;
+}
+
+.comment-reply_section{
+  margin-left: 30px;
+  font-size: medium;
+}
+
+.comment-reply_section > .reply-comment-input{
+    width: 500px;
+}
