--- a/app/components/style.css
+++ b/app/components/style.css
@@ -1,28 +1,27 @@
-.sidebar{
-  
-    background-color : #303956;
+.sidebar {
+
+    background-color: #303956;
     width: 65px;
     height: 976px;
     display: flex;
     flex-direction: column;
     align-items: center;
-  
+
 }
 
-i{
-    color: rgba(172,182,191,.2);
+i {
+    color: rgba(172, 182, 191, .2);
     margin-left: 4em;
 }
 
-.hide-text{
+.hide-text {
     opacity: 0;
-    color : #868e96;
+    color: #868e96;
     width: 100px;
 }
 
-.view-text{
+.view-text {
     opacity: 1;
-    color : #868e96;
-   width: 100px;
+    color: #868e96;
+    width: 100px;
 }
-
