--- a/app/protected/admin/assessments/assessments.css
+++ b/app/protected/admin/assessments/assessments.css
@@ -84,12 +84,14 @@
     padding: 0 10px 0 10px;
     border: 1px solid black;
     background-color: rgb(32, 189, 11);
+    position: relative;
+    bottom: 0.5em;
 }
 
 .tick-icon{
     width: 80%;
     font-size: xx-large;
-   
+    color: white;
 }
 
 .x-icon{
@@ -97,5 +99,19 @@
     text-align: center;
     background-color:red !important;
     padding-top: 5px !important;
-   
+    margin-left: 5px;
+    color: white;
+}
+
+.confirm-btns{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 3em;
+    margin-top: 20px;
+
+}
+
+.confirm-btns :first-child{
+    margin-right: 5px;
 }
