--- a/app/css/style.css
+++ b/app/css/style.css
@@ -23,3 +23,11 @@
     bottom: 0;
     transition: opacity .2s ease;
 }
+
+.side-bar-bg, .nav-bar-bg {
+    background: #2d593d !important;
+}
+
+.mdk-drawer__content {
+    color: white;
+}
