--- a/app/components/react-player.css
+++ b/app/components/react-player.css
@@ -15,6 +15,16 @@
     opacity: 0;
 }
 
+.details{
+    width: 100%;
+    
+}
+
+.full-screen{
+    width: 1000px;
+   
+}
+
 .person-container{
     display: flex;
     justify-content: flex-start;
