--- a/app/components/videoSidebar.css
+++ b/app/components/videoSidebar.css
@@ -2,7 +2,7 @@
 
 .video-sidebar {
   border-left: 1px solid #ddd;
-  width: 300px;
+  width: 30%;
   position: absolute;
   right: 0;
   display: flex;
@@ -17,7 +17,7 @@
 .player-wrapper {
   position: relative;
   padding-top: 52.25%; /* 720 / 1280 = 0.5625 */
-  width: 100vh;
+  width: 70%;
 
 }
 
@@ -112,7 +112,7 @@ padding-left: 15px;
     top: 37px;
     right: 0px;
     z-index: 99;
-    width: 205px;
+    width: 30%;
   }
   .title-content{
     font-size: small !important;
