--- a/app/css/app.css
+++ b/app/css/app.css
@@ -28234,7 +28234,7 @@ body,html {
 }
 
 [dir] .card-header-tabs-basic a {
-    padding: .5rem .75rem
+    padding: 1rem 1.75rem;
 }
 
 .card-header-tabs-basic a:hover {
