feat: delete option, rubric, question UI and Integration

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -25470,7 +25470,8 @@ a.text-primary-pickled-bluewood:focus,a.text-primary-pickled-bluewood:hover {
 }
 
 .material-icons {
-    vertical-align: middle
+    vertical-align: middle;
+    cursor: pointer;
 }
 
 .icon-16pt {
