--- a/app/css/calendar.css
+++ b/app/css/calendar.css
@@ -48,7 +48,7 @@
     flex-direction: column; /* Ensure children are stacked vertically */
     justify-content: flex-start; /* Align items to the top */
     align-items: center;
-    position: relative;
+    position: relative; /* Add this line */
     height: 80px; /* Decreased height for consistency */
     box-sizing: border-box; /* Include padding and border in the element's total width and height */
   }
@@ -98,7 +98,10 @@
     background: none;
     cursor: pointer;
     display: none;
-    position: absolute;
+    position: absolute; /* Add this line */
+    top: 50%; /* Add this line */
+    left: 50%; /* Add this line */
+    transform: translate(-50%, -50%); /* Add this line */
   }
 
 .page-separator {
