--- a/app/protected/admin/course-applicants/[id]/layout.scss
+++ b/app/protected/admin/course-applicants/[id]/layout.scss
@@ -2,9 +2,9 @@
     transition: .5s all ease-in-out;
     position: relative;
 
-    &:hover::after {
+    &.notComplete:hover::after {
         position: absolute;
-        content: "Check if all documents are correct and accept them to continue";
+        // content: "Check if all documents are correct and accept them to continue";
         left: 150px;
         width: 300px;
         color: #252525;
