--- a/app/css/scheduleclassform.css
+++ b/app/css/scheduleclassform.css
@@ -1,5 +1,5 @@
 .schedule-class-form {
-  max-width: 1000px; /* Increase the max-width as needed */
+  max-width: 1000px; 
   margin: auto;
   padding: 20px;
   border: 1px solid #ddd;
@@ -18,8 +18,8 @@
 }
 
 .schedule-class-form .date-time-group button.start-time {
-  width: 100%; /* Make the button take the full width of its container */
-  padding: 0.75rem; /* Increase padding for better appearance */
+  width: 100%;
+  padding: 0.75rem; 
 }
 
 .schedule-class-form label {
@@ -41,7 +41,7 @@
   display: block;
   width: 100%;
   padding: 0.75rem;
-  background-color: #28a745; /* Green color */
+  background-color: #28a745; 
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -49,7 +49,7 @@
 }
 
 .schedule-class-form .btn:hover {
-  background-color: #218838; /* Darker green color */
+  background-color: #218838; 
 }
 
 .schedule-class-form .checkbox-group {
