--- a/app/css/style.css
+++ b/app/css/style.css
@@ -64,7 +64,7 @@
 
 .progress-bar-fill {
     height: 100%;
-    background-color: #4caf50;
+    background-color: #24345c;
     transition: width 0.3s ease;
 }
 
