--- a/app/css/style.css
+++ b/app/css/style.css
@@ -36,7 +36,7 @@
 .mdk-drawer__content .material-icons,
 .mdk-drawer__content .sidebar-menu-button:hover,
 .sidebar-brand:hover {
-  color: #90ea8e;
+  color: #24345c;
 }
 
 .arrow-right {
