--- a/app/css/app.css
+++ b/app/css/app.css
@@ -32919,7 +32919,7 @@ label {
 }
 
 .sidebar-light .sidebar-brand {
-    color: #272c33
+    color:#141a29
 }
 
 [dir] .sidebar-light .sidebar-brand-bg {
