--- a/app/auth/verify-account/verify.scss
+++ b/app/auth/verify-account/verify.scss
@@ -37,6 +37,9 @@
                 border: 1px solid gray;
                 outline: none;
                 background-color: #f5f5f5;
+                color: #252525;
+                text-align: center;
+                font-size: 1.3em;
             }
         }
 
