--- a/app/auth/verify-account/verify.scss
+++ b/app/auth/verify-account/verify.scss
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 30%;
-    margin: auto;
+    width: 100%;
+    height: 100dvh;
     color: #252525;
 
     & h1 {
